syntax = "proto3";

package coop.rchain.node;

service Repl {
  rpc Run (CmdRequest) returns (ReplResponse) {}
  rpc Eval (EvalRequest) returns (ReplResponse) {}
}

service Diagnostics {
  rpc ListPeers (ListPeersRequest) returns (Peers) {}
}

message ListPeersRequest {
}

message Peers {
  repeated Peer peers = 1;
}

message Peer {
  string host = 1;
  int32  port = 2;
  bytes  key  = 3;
}

message CmdRequest {
  string line = 1;
}

message EvalRequest {
  string fileName = 1;
}

message ReplResponse {
  string output = 1;
}